--- a/index.html
+++ b/index.html
@@ -5,27 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Countdown Timer</title>
     <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+            font-family: Arial, sans-serif;
+        }
         body {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
             background-color: rgb(5, 1, 60);
-            font-family: Arial, sans-serif;
+        }
+        .background-image {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url("chicago-night-photo1.png");
+            background-size: cover;
+            background-position: center;
+            z-index: -1;
         }
         .container {
             position: relative;
-            display: inline-block;
-            max-width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            z-index: 1;
+            width: 100%;
+            height: 100%;
+            padding: 5% 0 15%; /* Add padding to top and bottom */
+            box-sizing: border-box;
         }
         .timer-background {
-            position: absolute;
-            top: 66%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgb(5, 1, 60);
+            background-color: rgba(5, 1, 60, 0.7);
             padding: 22px 20px;
             border-radius: 5px;
             cursor: pointer;
@@ -35,15 +52,7 @@
             color: #fff;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
         }
-        img {
-            max-width: 100%;
-            height: auto;
-        }
         .message-box {
-            position: absolute;
-            top: 8%;
-            left: 50%;
-            transform: translateX(-50%);
             background-color: rgba(5, 1, 60, 0.7);
             color: white;
             padding: 10px 20px;
@@ -55,7 +64,7 @@
         /* Media queries for mobile devices */
         @media screen and (max-width: 768px) {
             .container {
-                width: 95%;
+                padding: 15% 0;
             }
             .timer-background {
                 padding: 15px 10px;
@@ -70,6 +79,9 @@
         }
     
         @media screen and (max-width: 480px) {
+            .container {
+                padding: 20% 0;
+            }
             #countdown {
                 font-size: 1.5em;
             }
@@ -81,13 +93,14 @@
     </style>
 </head>
 <body>
+    <div class="background-image"></div>
     <div class="container">
         <div class="message-box">Liz is moving back to Chicago in:</div>
-        <img src="chicago-night-photo.png" alt="Countdown Image">
         <div class="timer-background" onclick="toggleFormat()">
             <div id="countdown" aria-live="polite"></div>
         </div>
     </div>
+</body>
     <script>
 const countDownDate = new Date("Jun 20, 2025 00:00:00").getTime();
 let formatIndex = 0;
