--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown Timer</title>
+    <title>Liz is coming home!</title>
     <style>
         body, html {
             margin: 0;
@@ -16,7 +16,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: rgb(5, 1, 60);
+            background-color: rgb(5, 1, 70);
         }
         .background-image {
             position: fixed;
@@ -24,11 +24,24 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url("chicago-night-photo1.png");
+            background-image: url("images/chicago-night-photo1.png");
             background-size: cover;
             background-position: center;
             z-index: -1;
         }
+        .background-image-mobile {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url("images/skyline-night-portrait.png");
+            background-size: cover;
+            background-position: center;
+            z-index: -1;
+        }
+
         .container {
             position: relative;
             display: flex;
@@ -42,10 +55,16 @@
             box-sizing: border-box;
         }
         .timer-background {
-            background-color: rgba(5, 1, 60, 0.7);
+            background-color: rgba(5, 1, 70, 0.7);
             padding: 22px 20px;
             border-radius: 5px;
             cursor: pointer;
+            transition: all 0.3s ease;
+        }
+        .timer-background:hover {
+            background-color: rgba(5, 1, 35, 0.7);
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            transform: scale(1.01);
         }
         #countdown {
             font-size: 3em;
@@ -53,7 +72,7 @@
             text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
         }
         .message-box {
-            background-color: rgba(5, 1, 60, 0.7);
+            background-color: rgba(5, 1, 70, 0.7);
             color: white;
             padding: 10px 20px;
             border-radius: 5px;
@@ -90,10 +109,20 @@
                 padding: 5px 10px;
             }
         }
+        @media screen and (max-width: 768px) and (orientation: portrait) {
+            .background-image {
+                display: none;
+             }
+            .background-image-mobile {
+                display: block;
+            }
+        }
+
     </style>
 </head>
 <body>
     <div class="background-image"></div>
+    <div class="background-image-mobile"></div>
     <div class="container">
         <div class="message-box">Liz is moving back to Chicago in:</div>
         <div class="timer-background" onclick="toggleFormat()">
